# autoauto

./: .gitignore  AmazonQ.md  README.md  background.js  cases didnt work.java  content.js  deploy.sh  log  manifest-template.json  manifest.json  popup.html  popup.js  utils.js
Demos/: Kathryn Demo.html
extension/: .eslintrc  .gitignore  README.md  automation.js  background.html  background.js  backgroundautomation.js  backgroundutils.js  clipboardStore.js  config.example.js  content.js  (+10 more)
host/: DPBayesian.py  Markov.py  adhoc.py  adhoc2.py  com.my_company.my_app.json  host.py  increment_finder.py  install_dep.sh  interpretationdetection.py  keyboard_listener.py  markov.py  markov_test_cases.json  patternfinder.py  printutils.py  proxy.py  pyproject.toml  req  requirements.txt  runtests.sh
host/tst/: DPBayesian_test.py  adhoc2_test.py  adhoc_test.py  context.py  markov.py  markov_test.py  patternfinder_test.py  testutils.py
host/tst/testdata/: markov_expected.json  markov_fuzzy_test_cases.json  markov_test_cases.json  patternfinder_fuzzy_expected.json  patternfinder_fuzzy_test_cases.json  patternfinder_perfect_expected.json
host/tst/testdata/patternfinder/fuzzy_keystrokes/: expected.json
host/tst/testdata/patternfinder/perfect_keystrokes/: expected.json  test.json
host/tst/testdata/patternfinder/perfect_list_incrementing/: expected.json  test.json
host/tst/testdata/patternfinder/perfect_list_no_incrementing/: expected.json  test.json
host/tst/testdata/patternfinder/perfect_list_no_interpretation/: expected.json  test.json
host/vision/: canny.ipynb  tea.py
(+75 files in other folders)
