[tool.poetry]
name = "host"
version = "0.1.0"
description = ""
authors = ["asultan123 <asultan@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "3.8.5"
keyboard = "0.13.5"
nativemessaging = "1.0.1"
networkx = "^2.5.1"
matplotlib = "^3.4.2"
pygraphviz = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
