[tool.poetry]
name = "host"
version = "0.1.0"
description = ""
authors = ["asultan123 <asultan@aucegypt.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"
nativemessaging = "^1.0.1"
networkx = "^2.6.2"
matplotlib = "^3.4.2"
pygraphviz = "^1.7"
autopep8 = "^1.5.7"
opencv-python = "^4.5.3"
jupyterlab = "^3.1.4"
pandas = "^1.3.1"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
